[package]
name = "application-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version="0.15.4", features = ["rayon", "serde"] }
num-traits = "0.2.14"
ndarray-npy = "0.8.1"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
interconnection-network-client = {path = "../interconnection-network/client/"}
execution-unit = {path = "../execution-unit"}